@@ -7,11 +7,10 @@ Todo.txt
 app_generators/ruby_app/USAGE
 app_generators/ruby_app/ruby_app_generator.rb
 app_generators/ruby_app/templates/README.txt
+app_generators/ruby_app/templates/Rakefile
 app_generators/ruby_app/templates/configs/empty.log
-app_generators/ruby_app/templates/fresh_rakefile
-app_generators/ruby_app/templates/module.rb
-app_generators/ruby_app/templates/script/generate
-app_generators/ruby_app/templates/test_helper.rb
+app_generators/ruby_app/templates/lib/module.rb
+app_generators/ruby_app/templates/test/test_helper.rb
 bin/install_rubigen_scripts
 bin/ruby_app
 examples/rails_generators/applications/app/USAGE
