@@ -31,7 +31,7 @@
     <h1>rubigen</h1>
     <div id="version" class="clickable" onclick='document.location = "http://rubyforge.org/projects/rubigen"; return false'>
       <p>Get Version</p>
-      <a href="http://rubyforge.org/projects/rubigen" class="numbers">1.0.3</a>
+      <a href="http://rubyforge.org/projects/rubigen" class="numbers">1.0.4</a>
     </div>
     <h1>Ruby Generator Framework</h1>
 
